Hid header/nav menu on scroll to bottom(for large screens) and on page footer appearance (for small screens). Fixed bug on 'Jump to Bottom' button and also replaced dropdown menu on small screens with a clickable (and better) one (using js event listeners).

--- a/static/sni_app/css/style.css
+++ b/static/sni_app/css/style.css
@@ -22,12 +22,6 @@ a {
     text-decoration: none;
 }
 
-
-nav a:active{
-    text-decoration:underline;
-}
-
-
 nav {
     position: fixed
 }
@@ -42,10 +36,66 @@ li.active a{
 li.active a:hover{
     color: skyblue;
 }
+nav div.wrapper a.icon{
+    display: none;
+}
 
 .dropdown{
     display: none;
 }
+#toTop-btn {
+        display: none;
+        position: fixed;
+        bottom: 5rem;
+        right: 3rem;
+        z-index: 99; 
+        border: none;
+        outline: none;
+        background-color: #C582EB;
+        color: #002657;
+        cursor: pointer;
+        border-radius: 50%;
+        width: 5rem;
+        height: 5rem;
+        opacity: 0.5;
+        box-shadow: 0rem 0rem 3rem 0rem #002657;
+      }
+
+      #toTop-btn:hover {
+        background-color: #002657;
+        box-shadow: 0rem 0rem 3rem 0rem #C582EB;
+      }
+
+      #toTop-btn:hover i {
+          color: #C582EB;
+      }
+
+    #toBottom-btn {
+        display: block;
+        position: fixed;
+        top: 14rem;
+        right: 3rem;
+        z-index: 99; 
+        border: none;
+        outline: none;
+        background-color: #002657;
+        color: #C582EB;
+        cursor: pointer;
+        border-radius: 50%;
+        width: 5rem;
+        height: 5rem;
+        opacity: 0.5;
+        box-shadow: 0rem 0rem 3rem 0rem #C582EB;
+      }
+
+      #toBottom-btn:hover {
+        background-color: #C582EB; /* Add a dark-grey background on hover */
+      }
+
+      #toBottom-btn:hover i {
+          color: #002657;
+      }
+
 main{
     background: #C582EB; /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(left top, #C582EB, #002657); /* For Safari 5.1 to 6.0 */
@@ -237,59 +287,6 @@ main{
     ul.navigation {
         display: inline-block;
     }
-    #toTop-btn {
-        display: none;
-        position: fixed;
-        bottom: 5rem;
-        right: 3rem;
-        z-index: 99; 
-        border: none;
-        outline: none;
-        background-color: #C582EB;
-        color: #002657;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 5rem;
-        height: 5rem;
-        opacity: 0.5;
-        box-shadow: 0rem 0rem 3rem 0rem #002657;
-      }
-
-      #toTop-btn:hover {
-        background-color: #002657;
-        box-shadow: 0rem 0rem 3rem 0rem #C582EB;
-      }
-
-      #toTop-btn:hover i {
-          color: #C582EB;
-      }
-
-    #toBottom-btn {
-        display: block;
-        position: fixed;
-        top: 14rem;
-        right: 3rem;
-        z-index: 99; 
-        border: none;
-        outline: none;
-        background-color: #002657;
-        color: #C582EB;
-        cursor: pointer;
-        border-radius: 50%;
-        width: 5rem;
-        height: 5rem;
-        opacity: 0.5;
-        box-shadow: 0rem 0rem 3rem 0rem #C582EB;
-      }
-
-      #toBottom-btn:hover {
-        background-color: #C582EB; /* Add a dark-grey background on hover */
-      }
-
-      #toBottom-btn:hover i {
-          color: #002657;
-      }
-
     @media only screen and (min-width: 672px) {
         .wrapper {
             text-align: center;
@@ -318,6 +315,9 @@ main{
             font-weight: bolder;
             color: #C582EB;
         }
+        #toBottom-btn {
+            top: 17rem;
+        }
         .grid-container {
             margin-top: 30rem;
         }
@@ -334,19 +334,18 @@ main{
     }
     @media only screen and (max-width: 671px) {
         .wrapper {
-            text-align: center;
-
+            /* text-align: center; */
         }
         #logo {
          /* margin-left: 3vw; */
 
-         margin-left: 0vw;
+         margin-left: 3rem;
          text-align: left;
          /* align-content: left; */
          margin-right: 0vw;
          /* margin-left: none; */
-         width: 50vw;
-         height: 10.947vw;
+         width: 28rem;
+         height: 5.7rem;
         }
         nav {
             padding: 4% 0% 4% 0%;
@@ -355,6 +354,54 @@ main{
         }
         ul.navigation {
             display: none;
+        }
+        nav div.wrapper a.icon{
+            display: block;
+            color: skyblue;
+            float: right;
+            margin-right: 3rem;
+            margin-top: 1.5rem;
+        }
+        nav div.wrapper a.icon:hover{
+            color: #C582EB;
+
+        }
+        ul.navigation.responsive {
+            display: block;
+            position: relative;
+            z-index: 1;
+            /* margin-top: 2rem; */
+        }
+        ul.navigation.responsive li {
+            font-size: 1.6rem;
+            margin: 2rem 0rem;
+            box-shadow: 1.6rem 0.5rem skyblue;
+            transition: font-size 0.3s;
+        }
+        ul.navigation.responsive li a {
+            transition: font-size 0.3s;
+        }
+        ul.navigation.responsive li a:hover {
+            font-size: 1.8rem;
+            color: white;
+        }
+        ul.navigation.responsive li.active {
+            border-bottom: none;
+        }
+        ul.navigation.responsive li.active a {
+            color: skyblue;
+        }
+
+        a.icon.responsive i{
+            position: absolute;
+            right: 3rem;
+            top: 3.5rem;
+            /* margin-top: 12rem; */
+        }
+        ul.navigation.responsive li {
+            float: none;
+            display: block;
+            text-align: left;
         }
         .dropbtn {
             background-color: inherit;
@@ -645,6 +692,7 @@ main{
         margin-left: 6vw;
         margin-bottom: 1.8vw;
     }
+    
     nav li {
         float: left;
         margin: 0vw 1.5vw;
